# rust_os

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  i686-rust-os.json
scripts/: build.rs  inject_asm.py
src/: lib.rs  std.c  vga_terminal.rs
src/c/: alloc.c  boot.s  linker.ld  std.h  std.s
src/rust/: kernel.rs  vga_terminal.rs
