[package]
name = "rust_os"
version = "0.1.0"
authors = ["Tony Lau <ual_ynot@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.8"
spin = "0.5.2"
volatile = "0.2.6"
